gcc/testsuite/rust/rustc/ui/impl-trait/issues/issue-88236.rs
// this used to cause stack overflows

trait Hrtb<'a> {
    type Assoc;
}

impl<'a> Hrtb<'a> for () {
    type Assoc = ();
}

impl<'a> Hrtb<'a> for &'a () {
    type Assoc = ();
}

fn make_impl() -> impl for<'a> Hrtb<'a, Assoc = impl Send + 'a> {}
// { dg-error ".E0657." "" { target *-*-* } .-1 }

fn main() {}

